sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:16: error: ';' expected but 'else' found.
  }else i=i+1
   ^